# courvux-tauri-example

./: .gitignore  FEATURES.md  LICENSE  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
docs/: index.html
docs/assets/: index-BYIDXHPS.css  index-CnWQTNno.css  index-D8C9oapN.js  index-D8KgjMVq.js  index-DTIjEk5h.css  index-V36RgZJz.js
site/: index.html  package.json  pnpm-lock.yaml  vite.config.js
site/src/: icons.js  main.js  style.css
src/: icons.js  main.js  markdown.js  pdf-export.js  style.css  tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
