[package]
name = "courvux-tauri-notepad"
version = "0.9.0"
edition = "2021"
authors = ["Vanjex <vanjexdev@gmail.com>"]
license = "MIT"
description = "Notepad demo — Courvux + Tauri 2 + Tailwind 4 + courvux-precompile (strict CSP)."

[lib]
name = "courvux_tauri_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
